--- a/templates/criarTopico.html
+++ b/templates/criarTopico.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
-<form method="POST" action="/">
-    <label>Novo Topico:</label>
-    <input type="text" name="descricao" id="descricao">
-    <input type="submit" value="Cadastrar">
-</form>
+<head>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/style.css')}}">
+</head>
+<body>
+    <div id=novoTopico>
+        <form method="POST" action="/">
+            <label>Novo Topico:</label>
+            <input type="text" name="descricao" id="descricao">
+            <input type="submit" value="Cadastrar">
+        </form>
+    </div>
+</body>
