--- a/templates/criarTopico.html
+++ b/templates/criarTopico.html
@@ -8,6 +8,7 @@
     <div id='box-central'>
         <h2>Novo Topico</h2>
         <form method="POST" action="/">
+            <input type="text" name="titulo" id="titulo">
             <textarea type="text" name="descricao" id="descricao"></textarea>
             </br>
             <input type="submit" value="Postar">
