--- a/templates/index.html
+++ b/templates/index.html
@@ -6,56 +6,72 @@
     <title>Blog</title>
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
 
 </head>
 
 <body class="p-3 mb-2 bg-primary text-white">
-    <div class=container>
+    <div class="container-sm">
         <div class="p-3 mb-2 bg-light text-dark">
-            <h1 id='title'>Blog do Mateus (Trabalho)</h1>
-            <form action="/novotopico">
-                <input type="submit" value="Novo Topico" class="btn btn-primary">
-            </form>
-            <table>
-                <div class="title">
-                    <tr>
-                        <td>Topico</td>
-                    <tr>
-                </div>
-                {% for r in regs %}
-                <div class="card" style="width: 600px;">
-                    <span class="border">
-                        <tr>
-                            <td>
-                                <div class="card-body">
-                                    <div class="card-text" disabled>
-                                        {{r[1]}}
-                                    </div>
 
-                                    <span>
+       <div class="container">
+          <div class="p-3 mb-2 bg-dark text-white" style="margin-top: -16px; margin-left: -28px; margin-right: -28px;">
+            <div class="container" style="margin-left: 150px;">
+                
+                <h1 id='title' style="font-family: 'Roboto Mono', monospace; font-size: 50px;">Blog do Mateus (Trabalho)</h1>
+                <form action="/novotopico" style="margin-top: 20px;">
+                    <input type="submit" value="Novo Topico" class="btn btn-primary">
+                </form>
+                
+            </div>
+          </div>
+       </div>
+            {% for r in regs %} <!-- INICIO DO FOR (CRIA OS CARDS) -->
+                <div class="card" style="width: 1000px; padding: 10px auto 0px auto; margin: 10px auto 10px auto;">
+                    <div class="card-body">
+                        <div class="card-header">
+
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col">
+                                       
+                                    </div>
+                                    <div class="col-md-auto">
                                         Data da postagem: {{r[2]}}
-                                    </span>
-                                    <span>
-                                        <form method="POST" action="/apagatopico">
-                                            <input type="submit" value="Apagar" class="btn btn-danger">
-                                            <input type="text" name="idtopico" id="idtopico" value="{{r[0]}}" hidden>
-                                        </form>
-                                    </span>
-                                    <span>
-                                        <form method="POST" action="/alteratopico">
-                                            <input type="submit" value="Alterar" class="btn btn-secondary">
-                                            <input type="text" name="idtopico" id="idtopico" value="{{r[0]}}" hidden>
-                                        </form>
-                                    </span>
+                                    </div>
                                 </div>
-                            </td>
-                        <tr>
-                    </span>
+                            </div>
+                        </div>
+                        <h3 class="card-title" style="text-align: center; margin: 10px;">
+                            {{r[3]}} <!--- TÍTULO  -->
+                        </h3>
+                        <p class="card-text" style="text-align: justify; margin-left: 30px; margin-right: 30px;">
+                            {{r[1]}} <!--- TEXTO  -->
+                        </p>
+                        <div class="container">
+                            <div class="row">
+                                <!--- botao de alterar  -->
+                                <div class="col" style="text-align: center;">
+                                    <form method="POST" action="/alteratopico">
+                                        <input type="submit" value="Alterar" class="btn btn-secondary">
+                                        <input type="text" name="idtopico" id="idtopico" value="{{r[0]}}" hidden>
+                                    </form>
+                                </div>
+                                <!--- botao de apagar  -->
+                                <div class="col" style="text-align: center;">
+                                    <form method="POST" action="/apagatopico">
+                                        <input type="submit" value="Apagar" class="btn btn-danger">
+                                        <input type="text" name="idtopico" id="idtopico" value="{{r[0]}}" hidden>
+                                    </form>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                {% endfor %}
-            </table>
+            {% endfor %}
         </div>
     </div>
 </body>
-
 </html>
