--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
                     style="margin-top: -16px; margin-left: -28px; margin-right: -28px;">
                     <div class="container" style="margin-left: 150px;">
 
-                        <h1 id='title' style="font-family: 'Roboto Mono', monospace; font-size: 50px; padding: 10px;">
+                        <h1 style="font-family: 'Roboto Mono', monospace; font-size: 50px; padding: 10px;">
                             Blog do Mateus (Trabalho)</h1>
                         <form method='POST' action="/" style="margin-top: 20px;">
                             <input type="text" value="create" name='operation' hidden>
